--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my code
 <h1>git hub</h1>
+<h2>ayub</h2>
     </title>
 </head>
 <body>
